update new blog

--- a/BACKUP/5_也谈“降维打击”.md
+++ b/BACKUP/5_也谈“降维打击”.md
@@ -1,5 +1,7 @@
 # [也谈“降维打击”](https://github.com/xpblog/say-something/issues/5)
 
+[返回目录](https://github.com/xpblog/say-something)
+
 ## 🐂 什么是维度？
 维度，数学上有线面体来描述一维，二维，三维。物理上有一维空间，二维空间，三维空间……那么什么叫维度？实际上，维度本质就是传递信息的渠道，比如数学上的x，y轴构成的平面，当多了z轴的维度的时候，当多了一维度时，就意味着多了一条传递信息的渠道，它能通过z轴来传递更多的信息。
 
